@@ -72,6 +72,10 @@
 
 
 extern unsigned long scm_string_hash (const unsigned char *str, scm_sizet len);
+
+extern SCM scm_mem2symbol (const char*, scm_sizet);
+extern SCM scm_str2symbol (const char*);
+
 extern SCM scm_sym2vcell (SCM sym, SCM thunk, SCM definep);
 extern SCM scm_sym2ovcell_soft (SCM sym, SCM obarray);
 extern SCM scm_sym2ovcell (SCM sym, SCM obarray);
